Started refactoring Game.cs
- Renamed to GameEngine.cs, added IRenderer interface and created
ConsoleRenderer which implements the interface.
- Changed all the private methods to public (might be changed later)
- Added text file with all the changes

--- a/Minesweeper-5/Minesweeper.csproj
+++ b/Minesweeper-5/Minesweeper.csproj
@@ -58,8 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="ConsoleRenderer.cs" />
+    <Compile Include="GameEngine.cs" />
     <Compile Include="Field.cs" />
+    <Compile Include="IRenderer.cs" />
     <Compile Include="Player.cs" />
   </ItemGroup>
   <ItemGroup>
