--- a/Minesweeper-5/Minesweeper.csproj
+++ b/Minesweeper-5/Minesweeper.csproj
@@ -60,12 +60,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Board.cs" />
-    <Compile Include="ConsoleRenderer.cs" />
+    <Compile Include="GameElements\Board.cs" />
+    <Compile Include="Controller\ConsoleGameController.cs" />
+    <Compile Include="Renderer\ConsoleRenderer.cs" />
     <Compile Include="GameEngine.cs" />
-    <Compile Include="Field.cs" />
-    <Compile Include="IRenderer.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="GameElements\Field.cs" />
+    <Compile Include="Controller\IGameController.cs" />
+    <Compile Include="Renderer\IRenderer.cs" />
+    <Compile Include="GameElements\Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
