Renamed controller to input method
Added unit tests for ConsoleInputMethod

--- a/Minesweeper-5/Minesweeper.csproj
+++ b/Minesweeper-5/Minesweeper.csproj
@@ -61,12 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameElements\Board.cs" />
-    <Compile Include="Controller\ConsoleGameController.cs" />
+    <Compile Include="InputMethods\ConsoleInputMethod.cs" />
     <Compile Include="MinesweeperGame.cs" />
     <Compile Include="Renderer\ConsoleRenderer.cs" />
     <Compile Include="GameEngine.cs" />
     <Compile Include="GameElements\Field.cs" />
-    <Compile Include="Controller\IGameController.cs" />
+    <Compile Include="InputMethods\IInputMethod.cs" />
     <Compile Include="Renderer\IRenderer.cs" />
     <Compile Include="GameElements\Player.cs" />
   </ItemGroup>
