--- a/MinesweeperUnitTests/MinesweeperUnitTests.csproj
+++ b/MinesweeperUnitTests/MinesweeperUnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BoardTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ConsoleInputMethodTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Minesweeper-5\Minesweeper.csproj">
