--- a/MinesweeperUnitTests/MinesweeperUnitTests.csproj
+++ b/MinesweeperUnitTests/MinesweeperUnitTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleInputMethodTests.cs" />
     <Compile Include="ConsoleRendererTests.cs" />
+    <Compile Include="PlayerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Minesweeper-5\Minesweeper.csproj">
