Updated naming of HighScores.GetTopScores()

--- a/Minesweeper-5/Minesweeper.csproj
+++ b/Minesweeper-5/Minesweeper.csproj
@@ -66,11 +66,11 @@
     <Compile Include="Common\HighScores.cs" />
     <Compile Include="InputMethods\ConsoleInputMethod.cs" />
     <Compile Include="MinesweeperGame.cs" />
-    <Compile Include="Renderer\ConsoleRenderer.cs" />
+    <Compile Include="Renderers\ConsoleRenderer.cs" />
     <Compile Include="GameEngine.cs" />
     <Compile Include="Common\Field.cs" />
     <Compile Include="InputMethods\IInputMethod.cs" />
-    <Compile Include="Renderer\IRenderer.cs" />
+    <Compile Include="Renderers\IRenderer.cs" />
     <Compile Include="Common\Player.cs" />
   </ItemGroup>
   <ItemGroup>
