--- a/Minesweeper-5/Minesweeper/Minesweeper.csproj
+++ b/Minesweeper-5/Minesweeper/Minesweeper.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Minesweeper.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
